[tool.poetry]
name = "proxy_cycler"
version = "1.1.0"
description = "A simple tool for using a collection of proxies with the Python requests library"
authors = ["Daryl Stronge <darylkstronge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.00"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
